--- a/admin/src/main/resources/application.yaml
+++ b/admin/src/main/resources/application.yaml
@@ -1,2 +1,9 @@
 server:
   port: 8002
+
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/link
+    username: admin
+    password: admin
+    driver-class-name: com.mysql.cj.jdbc.Driver
