--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,20 @@ services:
     networks:
       - backend
 
+  redis:
+    image: redis:7.0
+    container_name: redis-cache
+    command: [ "redis-server", "--requirepass", "123456" ]
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    networks:
+      - backend
+
 volumes:
   mysql_data:
+  redis_data:
 
 networks:
   backend:
