--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -47,5 +47,10 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>shardingsphere-jdbc-core</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
