--- a/admin/src/main/resources/shardingsphere-config-dev.yaml
+++ b/admin/src/main/resources/shardingsphere-config-dev.yaml
@@ -17,6 +17,13 @@ rules:
           standard:
             shardingColumn: username
             shardingAlgorithmName: user_table_hash_mod
+      t_group :
+        # declare physical table name(s)
+        actualDataNodes: ds_0.t_group_${0..15}
+        tableStrategy:
+          standard:
+            shardingColumn: username
+            shardingAlgorithmName: group_table_hash_mod
 
     shardingAlgorithms:
       user_table_hash_mod:
