fix: update redis config in ci yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,18 +11,17 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      redis:
-        image: redis:6.2
-        ports:
-          - 6379:6379
-        env:
-          REDIS_PASSWORD: 123456
-        options: >-
-          --requirepass 123456
-          --health-cmd "redis-cli -a 123456 ping"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+      services:
+        redis:
+          image: redis:6.2
+          ports:
+            - 6379:6379
+          command: [ "redis-server", "--requirepass", "123456" ]
+          options: >-
+            --health-cmd "redis-cli -a 123456 ping"
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
 
       mysql:
         image: mysql:8.0
