--- a/project/src/main/resources/shardingsphere-config-dev.yaml
+++ b/project/src/main/resources/shardingsphere-config-dev.yaml
@@ -24,6 +24,12 @@ rules:
           standard:
             shardingColumn: full_short_url
             shardingAlgorithmName: link_route_table_hash_mod
+      t_link_stats_today:
+        actualDataNodes: ds_0.t_link_stats_today_${0..15}
+        tableStrategy:
+          standard:
+            shardingColumn: gid
+            shardingAlgorithmName: link_stats_today_hash_mod
 
     shardingAlgorithms:
       link_table_hash_mod:
@@ -34,6 +40,9 @@ rules:
         type: HASH_MOD
         props:
           sharding-count: 16
-
+      link_stats_today_hash_mod:
+        type: HASH_MOD
+        props:
+          sharding-count: 16
 props:
   sql-slow: true
