--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -19,6 +19,8 @@ spring:
       suffix: .html
 
 short-link:
+  domain:
+    default: localhost:8001
   stats:
     locale:
       amap-key: 824c511f0997586ea016f979fdb23087
