--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,26 @@
 version: '3.8'
 
 services:
+  # docker-compose up -d nacos
+  nacos:
+    image: nacos/nacos-server:latest
+    container_name: nacos
+    ports:
+      - "8848:8848"
+    environment:
+      - MODE=standalone
+      - SPRING_DATASOURCE_PLATFORM=mysql
+      - MYSQL_SERVICE_HOST=mysql
+      - MYSQL_SERVICE_DB_NAME=link
+      - MYSQL_SERVICE_PORT=3306
+      - MYSQL_SERVICE_USER=admin
+      - MYSQL_SERVICE_PASSWORD=admin
+    volumes:
+      - ./nacos/logs:/home/nacos/logs
+    networks:
+      - backend
+    restart: unless-stopped
+
   mysql:
     image: mysql:8.0
     container_name: link-db
