fix: fix request sent to endpoint of gateway 8000 not execute redireciton

--- a/gateway/envoy.yaml
+++ b/gateway/envoy.yaml
@@ -1,6 +1,6 @@
 static_resources:
   listeners:
-    - name: listener_0
+    - name: listener_gateway
       address:
         socket_address:
           address: 0.0.0.0
@@ -18,25 +18,45 @@ static_resources:
                       domains: ["*"]
                       routes:
                         - match:
-                            prefix: "/"
+                            prefix: "/api/short-link/project"
                           route:
-                            cluster: example_cluster
+                            cluster: project_cluster
+                        - match:
+                            prefix: "/api/short-link/admin"
+                          route:
+                            cluster: admin_cluster
                 http_filters:
                   - name: envoy.filters.http.router
                     typed_config:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
 
   clusters:
-    - name: example_cluster
+    # Project cluster
+    - name: project_cluster
       connect_timeout: 0.25s
       type: STRICT_DNS
       lb_policy: ROUND_ROBIN
       load_assignment:
-        cluster_name: example_cluster
+        cluster_name: project_cluster
         endpoints:
           - lb_endpoints:
               - endpoint:
                   address:
                     socket_address:
-                      address: www.example.com
-                      port_value: 80
+                      address: project
+                      port_value: 8001
+
+    # Admin cluster
+    - name: admin_cluster
+      connect_timeout: 0.25s
+      type: STRICT_DNS
+      lb_policy: ROUND_ROBIN
+      load_assignment:
+        cluster_name: admin_cluster
+        endpoints:
+          - lb_endpoints:
+              - endpoint:
+                  address:
+                    socket_address:
+                      address: admin
+                      port_value: 8002
