feat: enable consul configuration register center and let admin, project register to consul also uniform service names for three modules: gateway, admin and project

--- a/admin/src/main/resources/application.yaml
+++ b/admin/src/main/resources/application.yaml
@@ -3,6 +3,14 @@ server:
 spring:
   application:
     name: short-link-admin
+  cloud:
+    consul:
+      host: 127.0.0.1
+      port: 8500
+      discovery:
+        register: true
+        service-name: short-link-admin
+
   datasource:
     driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
     url: jdbc:shardingsphere:classpath:shardingsphere-config-${database.env:dev}.yaml
