--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -19,7 +19,7 @@ spring:
       host: 127.0.0.1
       port: 8500
       discovery:
-        service-name: shortlink-platform
+        service-name: short-link-gateway
         register: true
       config:
         enabled: false
