refactor: replace original http util directly request into rpc invocation by adopting feign

--- a/admin/src/main/resources/application.yaml
+++ b/admin/src/main/resources/application.yaml
@@ -4,6 +4,11 @@ spring:
   application:
     name: short-link-admin
   cloud:
+    loadbalancer:
+      retry:
+        enabled: true    # enable retry for failed calls
+      ribbon:
+        enabled: false    # if you had Ribbon previously, disable it
     consul:
       host: 127.0.0.1
       port: 8500
