--- a/bdd-tests/pom.xml
+++ b/bdd-tests/pom.xml
@@ -35,10 +35,10 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Serenity JUnit -->
+        <!-- Serenity JUnit 5 -->
         <dependency>
             <groupId>net.serenity-bdd</groupId>
-            <artifactId>serenity-junit5</artifactId> <!-- Use JUnit 5 -->
+            <artifactId>serenity-junit5</artifactId>
             <version>${serenity.version}</version>
             <scope>test</scope>
         </dependency>
@@ -74,7 +74,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Hamcrest (modern version) -->
+        <!-- Hamcrest -->
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
@@ -82,18 +82,19 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- AssertJ (fluent assertions) -->
+        <!-- AssertJ -->
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
+
         <!-- Cucumber Java -->
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>8.12.0</version>
+            <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -101,11 +102,11 @@
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
-            <version>8.12.0</version>
+            <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
 
-        <!-- JUnit -->
+        <!-- JUnit 4 -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -113,14 +114,16 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Optional: RestAssured (if you want cleaner API testing) -->
+        <!-- RestAssured -->
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>5.3.2</version>
+            <version>${restassured.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+
     <build>
         <plugins>
             <!-- Compiler settings -->
