--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>project</module>
         <module>gateway</module>
         <module>bdd-tests</module>
+        <module>aggregation</module>
     </modules>
 
 
