feat: merge two module admin, project configs like application config and db sharding to agg module

--- a/aggregation/src/main/resources/application.yaml
+++ b/aggregation/src/main/resources/application.yaml
@@ -1,25 +1,32 @@
 server:
-  port: 8001
+  port: 8003
+
 spring:
   application:
-    name: short-link-project
+    name: short-link-aggregation
   datasource:
     driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
     url: jdbc:shardingsphere:classpath:shardingsphere-config-${database.env:dev}.yaml
-
   data:
     redis:
       host: 127.0.0.1
       port: 6379
-
   mvc:
     view:
       prefix: /templates/
       suffix: .html
 
+aggregation:
+  remote-url: http://127.0.0.1:${server.port}
+
+
 short-link:
   domain:
-    default: localhost:8001
+    default: localhost:8003
+
+
+
+
 
 mybatis-plus:
   configuration:
