--- a/project/src/main/resources/application.yaml
+++ b/project/src/main/resources/application.yaml
@@ -6,12 +6,22 @@ spring:
   datasource:
     driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
     url: jdbc:shardingsphere:classpath:shardingsphere-config-${database.env:dev}.yaml
-
   data:
     redis:
       host: 127.0.0.1
       port: 6379
-
+  cloud:
+    loadbalancer:
+      retry:
+        enabled: true    # enable retry for failed calls
+      ribbon:
+        enabled: false    # if you had Ribbon previously, disable it
+    consul:
+      host: 127.0.0.1
+      port: 8500
+      discovery:
+        register: true
+        service-name: short-link-project
   mvc:
     view:
       prefix: /templates/
