--- a/aggregation/src/main/resources/application-docker.yaml
+++ b/aggregation/src/main/resources/application-docker.yaml
@@ -1,11 +1,11 @@
 server:
-  port: 8001
+  port: 8003
 spring:
   application:
-    name: short-link-project
+    name: short-link-aggregation
   datasource:
     driver-class-name: org.apache.shardingsphere.driver.ShardingSphereDriver
-    url: jdbc:shardingsphere:classpath:shardingsphere-config.yaml
+    url: jdbc:shardingsphere:classpath:shardingsphere-config-docker.yaml
   data:
     redis:
       host: 127.0.0.1
@@ -21,15 +21,18 @@ spring:
       port: 8500
       discovery:
         register: true
-        service-name: short-link-project
+        service-name: short-link-aggregation
   mvc:
     view:
       prefix: /templates/
       suffix: .html
 
+aggregation:
+  remote-url: http://127.0.0.1:${server.port}
+
 short-link:
   domain:
-    default: localhost:8001
+    default: localhost:8003
 
 mybatis-plus:
   configuration:
