--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,55 @@
         <module>aggregation</module>
     </modules>
 
+    <profiles>
+        <profile>
+            <id>docker-local</id>
+            <modules>
+                <module>aggregation</module>
+                <module>gateway</module>
+            </modules>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                        <version>3.4.4</version>
+                        <configuration>
+                            <from><image>eclipse-temurin:17</image></from>
+                            <to><image>local/${project.artifactId}:${project.version}</image></to>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>docker-push</id>
+            <modules>
+                <module>aggregation</module>
+                <module>gateway</module>
+            </modules>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                        <version>3.4.4</version>
+                        <configuration>
+                            <from><image>eclipse-temurin:17</image></from>
+                            <to>
+                                <image>docker.io/nanachi1027/${project.artifactId}:${project.version}</image>
+                                <auth>
+                                    <username>${env.DOCKER_USERNAME}</username>
+                                    <password>${env.DOCKER_PASSWORD}</password>
+                                </auth>
+                            </to>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
 
     <properties>
         <java.version>17</java.version>
