feat: config jib maven plugin and also update ci pipeline script

--- a/aggregation/pom.xml
+++ b/aggregation/pom.xml
@@ -31,27 +31,6 @@
     </dependencies>
     <profiles>
         <profile>
-            <id>docker-local</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.google.cloud.tools</groupId>
-                        <artifactId>jib-maven-plugin</artifactId>
-                        <version>3.4.4</version>
-                        <configuration>
-                            <from>
-                                <image>eclipse-temurin:17</image>
-                            </from>
-                            <to>
-                                <image>local/${project.artifactId}:${project.version}</image>
-                            </to>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
             <id>docker-push</id>
             <build>
                 <plugins>
@@ -62,14 +41,32 @@
                         <configuration>
                             <from>
                                 <image>eclipse-temurin:17</image>
+                                <platforms>
+                                    <platform>
+                                        <architecture>arm64</architecture>
+                                        <os>linux</os>
+                                    </platform>
+                                    <platform>
+                                        <architecture>amd64</architecture>
+                                        <os>linux</os>
+                                    </platform>
+                                </platforms>
                             </from>
                             <to>
-                                <image>docker.io/nanachi1027/${project.artifactId}:${project.version}</image>
+                                <image>docker.io/nanachi1027/${project.artifactId}:${app.image.tag}</image>
                                 <auth>
                                     <username>${env.DOCKER_USERNAME}</username>
                                     <password>${env.DOCKER_PASSWORD}</password>
                                 </auth>
                             </to>
+                            <extraDirectories>
+                                <paths>
+                                    <path>
+                                        <from>${project.basedir}/src/main/resources</from>
+                                        <into>/app/resources</into>
+                                    </path>
+                                </paths>
+                            </extraDirectories>
                         </configuration>
                     </plugin>
                 </plugins>
