--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -37,4 +37,25 @@
             <artifactId>fastjson2</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <configuration>
+                    <container>
+                        <extraDirectories>
+                            <paths>
+                                <path>
+                                    <from>${project.basedir}/src/main/resources/application-docker.yaml</from>
+                                    <into>/config/gateway/application-docker.yaml</into>
+                                </path>
+                            </paths>
+                        </extraDirectories>
+                    </container>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
