--- a/gateway/src/main/resources/application-docker.yaml
+++ b/gateway/src/main/resources/application-docker.yaml
@@ -16,7 +16,7 @@ spring:
           predicates:
             - Path=/api/short-link/project/**
     consul:
-      host: 127.0.0.1
+      host: consul
       port: 8500
       discovery:
         service-name: short-link-gateway
@@ -25,5 +25,5 @@ spring:
         enabled: false
   data:
     redis:
-      host: 127.0.0.1
+      host: redis
       port: 6379
