--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -3,23 +3,23 @@ server:
 
 spring:
   application:
-    name: short-link-gateway
+    name: shortlink-gateway
   cloud:
     gateway:
       routes:
         - id: admin_route
-          uri: http://localhost:8002  # Admin service URL
+          uri: http://localhost:8003  # Admin service URL
           predicates:
             - Path=/api/short-link/admin/**
         - id: project_route
-          uri: http://localhost:8001  # Project service URL
+          uri: http://localhost:8003  # Project service URL
           predicates:
-            - Path=/api/short-link/project/**
+            - Path=/api/short-link/**
     consul:
       host: 127.0.0.1
       port: 8500
       discovery:
-        service-name: short-link-gateway
+        service-name: shortlink-gateway
         register: true
       config:
         enabled: false
