--- a/aggregation/src/main/resources/shardingsphere-config.yaml
+++ b/aggregation/src/main/resources/shardingsphere-config.yaml
@@ -9,22 +9,38 @@ dataSources:
 rules:
   - !SHARDING
     tables:
-      # declare logical table name
+      t_link:
+        actualDataNodes: ds_0.t_link_${0..15}
+        tableStrategy:
+          standard:
+            shardingColumn: gid
+            shardingAlgorithmName: link_table_hash_mod
+      t_link_route:
+        actualDataNodes: ds_0.t_link_route_${0..15}
+        tableStrategy:
+          standard:
+            shardingColumn: full_short_url
+            shardingAlgorithmName: link_route_table_hash_mod
+      t_link_stats_today:
+        actualDataNodes: ds_0.t_link_stats_today_${0..15}
+        tableStrategy:
+          standard:
+            shardingColumn: gid
+            shardingAlgorithmName: link_stats_today_hash_mod
       t_user:
-        # declare physical table name(s)
         actualDataNodes: ds_0.t_user_${0..15}
         tableStrategy:
           standard:
             shardingColumn: username
             shardingAlgorithmName: user_table_hash_mod
-      t_group :
-        # declare physical table name(s)
+      t_group:
         actualDataNodes: ds_0.t_group_${0..15}
         tableStrategy:
           standard:
             shardingColumn: username
             shardingAlgorithmName: group_table_hash_mod
-
+    bindingTables:
+      - t_link, t_link_stats_today
     shardingAlgorithms:
       user_table_hash_mod:
         type: HASH_MOD
@@ -34,6 +50,19 @@ rules:
         type: HASH_MOD
         props:
           sharding-count: 16
+      link_table_hash_mod:
+        type: HASH_MOD
+        props:
+          sharding-count: 16
+      link_route_table_hash_mod:
+        type: HASH_MOD
+        props:
+          sharding-count: 16
+      link_stats_today_hash_mod:
+        type: HASH_MOD
+        props:
+          sharding-count: 16
+
   - !ENCRYPT
     tables:
       t_user:
