opt: opt packaging logic wrap both admin and project to agg

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,7 +98,9 @@ jobs:
       # ===== Docker build & push =====
       - name: Build & Push Aggregation Image
         run: |
-          mvn clean package jib:build -Pdocker-push -pl aggregation -am -DskipTests -Dapp.image.tag=${{ env.BUILD_NUMBER }}
+          mvn clean install -pl admin,project -DskipTests
+          mvn clean package -pl aggregation -DskipTests
+          mvn compile jib:build -Pdocker-push -pl aggregation -am -DskipTests -Dapp.image.tag=${{ env.BUILD_NUMBER }}
 
       - name: Build & Push Gateway Image
         run: |
