--- a/gateway/src/main/resources/application-docker.yaml
+++ b/gateway/src/main/resources/application-docker.yaml
@@ -12,13 +12,13 @@ spring:
           predicates:
             - Path=/api/short-link/admin/**
           filters:
-            - RewritePath=/api/short-link/admin/(?<remaining>.*), /api/short-link/admin/${remaining}
+            - RewritePath=/api/short-link/admin/(?<remaining>.*), /${remaining}
         - id: project_route
           uri: http://shortlink-aggregation:8003
           predicates:
             - Path=/api/short-link/**
           filters:
-            - RewritePath=/api/short-link/(?<remaining>.*), /api/short-link/${remaining}
+            - RewritePath=/api/short-link/(?<remaining>.*), /${remaining}
     consul:
       host: consul
       port: 8500
