--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>gateway</module>
         <module>bdd</module>
         <module>aggregation</module>
+        <module>monitor</module>
     </modules>
 
     <profiles>
