--- a/gateway/envoy.yaml
+++ b/gateway/envoy.yaml
@@ -30,7 +30,8 @@ static_resources:
                     typed_config:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
 
-    # Agg cluster
+  # Agg cluster
+  clusters:
     - name: shortlink-aggregation
       connect_timeout: 0.25s
       type: STRICT_DNS
