--- a/docker-compose-deploy.yml
+++ b/docker-compose-deploy.yml
@@ -70,6 +70,7 @@ services:
       - redis_data_deploy:/data
     networks:
       - backend-deploy
+    restart: unless-stopped
 
   # prometheus for collecting monitor metrics
   prometheus:
@@ -87,9 +88,30 @@ services:
       - envoy
       - shortlink-gateway
       - shortlink-aggregation
-
     networks:
       - backend-deploy
+    healthcheck:
+      test: [ "CMD", "wget", "--spider", "-q", "http://prometheus:9090/-/ready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
+    networks:
+      - backend-deploy
+    volumes:
+      - grafana_data_deploy:/var/lib/grafana
     restart: unless-stopped
 
   shortlink-gateway:
@@ -124,11 +146,13 @@ services:
       - consul
       - envoy
       - prometheus
+    restart: unless-stopped
 
 volumes:
   mysql_data_deploy:
   redis_data_deploy:
   prometheus_data_deploy:
+  grafana_data_deploy:
 
 networks:
   backend-deploy:
