--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -70,7 +70,7 @@ services:
     networks:
       - backend
 
-  # prometheus for collecting monitor metrics
+  # Prometheus for collecting monitor metrics
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
@@ -86,12 +86,43 @@ services:
       - envoy
     networks:
       - backend
+    healthcheck:
+      test: [ "CMD", "wget", "--spider", "-q", "http://localhost:9090/-/ready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
+  # Grafana for showing prometheus collected & stored on UI dashboard
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    deploy:
+      resources:
+        limits:
+          cpus: "2.0"
+          memory: 1024M
+        reservations:
+          cpus: "1.5"
+          memory: 512M
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
+    networks:
+      - backend
+    volumes:
+      - grafana_data:/var/lib/grafana
 
 volumes:
   mysql_data:
   redis_data:
   prometheus_data:
-
+  grafana_data:
 
 networks:
   backend:
